[tool.poetry]
name = "researchpapers"
version = "1.0.0"  # Project's version
description = "A tool to fetch and process data from PubMed."
authors = [
    "Shreyas Dankhade <you@example.com>"
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.5.3"  # Updated to specific version
requests = "2.28.1"  # Updated to specific version

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getpaperslist = "researchpapers.mainfunction:main"
